--- a/main.css
+++ b/main.css
@@ -13,7 +13,24 @@ img{
     bottom: 20px;
 }
 
-.wrapper {
+.contenedor {
+    height: 100px;
+    background-color: #FFF;
+    box-shadow: 0 1px 5px #000;
+    display: flex;
+    margin-top: 0;
+    justify-content: space-around;
+    align-items: center;
+}
+.contenedor a {
+    text-decoration: none;
+    color: #000;
+}
+.esconder {
+    display: none;
+}
+
+.wrapper{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -28,6 +45,10 @@ img{
     100% {background-position: 100%}
 }
 
+@keyframes text{
+    0% {text-position: 0%}
+    100% {text-position: 100%}   
+}
 
 *{
     margin: 0px;
