--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body, html{
     width: 100%;
     height: 100%;
     position: absolute;
-    background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
+    background: linear-gradient(45deg, #ee98fb,#883997, #ff77a9 , #b4004e);/* #304ffe, #7986cb);*/
     background-size: 600% 100%;
     animation: gradient 16s linear infinite;
     animation-direction: alternate;
@@ -81,8 +81,8 @@ label #btn, label #cancel{
 }
 
 label #btn{
-    left: 40px;
-    top: 25px;
+    left: 0;
+    top: 0;
     font-size: 35px;
     color: white;
     border-radius: 3px;
@@ -123,3 +123,26 @@ section{
     transition: all .5s;
 }
 
+
+#caja{
+flex-direction: column;
+width: 250px;
+height: auto;
+margin: 0px 10px 0px 10px;
+padding: 0px 0px 0px 0xp;
+}
+
+div.caja{
+width: 60%;
+margin: 0px 20% 0px 20%;
+display: flex;
+flex-direction: row;
+align-content: center;
+
+}
+
+form > img{
+padding: 10px 0 0 0;
+width: 50%;
+height: 150px;
+}
