lectura de archivo .mp3 utilizando las librerias de jsmediatags y mp3-duration

--- a/main.css
+++ b/main.css
@@ -2,14 +2,16 @@ body, html{
     margin: 0vh;
    /* height: 0vh;
     padding: 0vh;*/
-
-
+    
+    
 }
 
 .wrapper {
     width: 100%;
     height: 100%;
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    position: relative;
     background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
     background-size: 600% 100%;
     animation: gradient 16s linear infinite;
@@ -20,6 +22,12 @@ body, html{
     100% {background-position: 100%}
 }
 
+div.cancion{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    left: 40%;
+}
 
 *{
     margin: 0px;
