--- a/main.css
+++ b/main.css
@@ -123,3 +123,45 @@ section{
     transition: all .5s;
 }
 
+menu {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #042331;
+    box-shadow: 0 1px 5px #000;
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    left: 0%;
+    right: 0;
+    margin-top: 0;
+    margin: 0px;
+    justify-content: space-around;
+    align-items: center;
+  
+}
+menu a {
+    text-decoration: none;
+    color: rgb(205, 4, 255) !important;
+    
+}
+
+menu:hover{
+  padding-bottom: 5px; 
+  
+}
+
+
+
+menu li i{
+  width: 0.5 px;
+  left: 0px;
+  top: 0px;
+  font-size: 35px;
+  color: rgb(249, 248, 250);
+  border-radius: 3px;
+  padding: 0;
+  transition: all .5s;
+  margin: 1px;
+}
