--- a/main.css
+++ b/main.css
@@ -1,12 +1,36 @@
 body, html{
     margin: 0vh;
    /* height: 0vh;
-    padding: 0vh;*/
-
-
+    padding: 0vh;*/  
+    
 }
 
-.wrapper {
+img{
+    padding: 30px;
+    width: 50px;
+    height:50px;
+    align-items: center;
+    bottom: 10px;
+}
+
+.contenedor {
+    height: 100px;
+    background-color: #FFF;
+    box-shadow: 0 1px 5px #000;
+    display: flex;
+    margin-top: 0;
+    justify-content: space-around;
+    align-items: center;
+}
+.contenedor a {
+    text-decoration: none;
+    color: #000;
+}
+.esconder {
+    display: none;
+}
+
+.wrapper{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -14,12 +38,17 @@ body, html{
     background-size: 600% 100%;
     animation: gradient 16s linear infinite;
     animation-direction: alternate;
+
 }
 @keyframes gradient {
     0% {background-position: 0%}
     100% {background-position: 100%}
 }
 
+@keyframes text{
+    0% {text-position: 0%}
+    100% {text-position: 100%}   
+}
 
 *{
     margin: 0px;
@@ -30,31 +59,36 @@ body, html{
 
 .sidebar{
    position: fixed;
-   left: -250px;
-   width: 250px;
+   width: 22%;
    height: 100%;
    background: #042331;
-   transition: all .5s ease;
-
+   
 }
 
 .sidebar header{
-    font-size: 22px;
+    font-size: 100spx;
     color: white;
     text-align: center;
     line-height: 70px;
     background: #063146;
     user-select: none;
+    align-items: center;
+}
+
+a{
+    text-align: left;
+    text-size-adjust: 30% ;
 }
 
 .sidebar ul a{
     display: block;
-    height: 100%;
+    height: 30%;
     width: 100%;
-    line-height: 65px;
+    align-items: center;
+    line-height: 50px;
     font-size: 20px;
     color: white;
-    padding-left: 40px;
+    padding-left: 20px;
     box-sizing: border-box;
     border-top: 1px solid rgba(255,255,255,.1);
     border-bottom: 1px solid black;
@@ -63,10 +97,13 @@ body, html{
 
 ul li:hover a{
     padding-left: 60px;
+    bottom: 40px;
 }
 
 .sidebar ul a i{
-    margin-right: 16px;
+    margin-right: 0px;
+    width: 30px;
+    height: 40px;
 }
 
 #check{
@@ -74,94 +111,53 @@ ul li:hover a{
 
 }
 
-label #btn, label #cancel{
-    position: absolute;
-    cursor: pointer;
-    background: #042331;
-}
 
-label #btn{
-    left: 40px;
-    top: 25px;
-    font-size: 35px;
-    color: white;
-    border-radius: 3px;
-    padding: 6px 12px;
-    transition: all .5s;
-}
 
-label #cancel{
-    z-index: 1111;
-    left: -195px;
-    top: 17px;
-    font-size: 30px;
-    color: #0a5275;
-    padding: 4px 9px;
-    transition: all .5s ease;
-}
 
-#check:checked ~ .sidebar{
-    left: 0;
-}
 
-#check:checked ~ label #btn{
-    left: 250;
-    opacity: 0;
-    pointer-events: none;
-
-}
-#check:checked ~ label #cancel{
-    left: 195px;
-}
-
-#check:checked ~ section{
-    margin-left: 250px;
-}
-
-section{
-    height: 100vh;
-    transition: all .5s;
-}
 
 menu {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #042331;
-    box-shadow: 0 1px 5px #000;
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    left: 0%;
-    right: 0;
-    margin-top: 0;
-    margin: 0px;
-    justify-content: space-around;
-    align-items: center;
-  
-}
-menu a {
-    text-decoration: none;
-    color: rgb(205, 4, 255) !important;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      height: 60px;
+      background-color: #042331;
+      box-shadow: 0 1px 5px #000;
+      display: flex;
+      position: fixed;
+      bottom: 0;
+      left: 0%;
+      right: 0;
+      margin-top: 0;
+      margin: 0px;
+      justify-content: space-around;
+      align-items: center;
     
-}
+  }
+  menu a {
+      text-decoration: none;
+      color: rgb(205, 4, 255) !important;
+      
+  }
 
-menu:hover{
-  padding-bottom: 5px; 
+  menu:hover{
+    padding-bottom: 5px; 
+    
+  }
+
+
+
+  menu li i{
+    width: 0.5 px;
+    left: 0px;
+    top: 0px;
+    font-size: 35px;
+    color: rgb(249, 248, 250);
+    border-radius: 3px;
+    padding: 0;
+    transition: all .5s;
+    margin: 1px;
+  }
+ 
+ 
   
-}
-
-
-
-menu li i{
-  width: 0.5 px;
-  left: 0px;
-  top: 0px;
-  font-size: 35px;
-  color: rgb(249, 248, 250);
-  border-radius: 3px;
-  padding: 0;
-  transition: all .5s;
-  margin: 1px;
-}
